--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -34,3 +34,5 @@ innodb_buffer_pool_size = 1G
 slow_query_log=ON
 long_query_time = 0.01
 slow_query_log_file = /tmp/mysql-slow.log
+disable-log-bin
+innodb_flush_log_at_trx_commit=2
